work wrapper size issues, nav z-index prob on projects page

--- a/craft/assets/css/custom/_work.css
+++ b/craft/assets/css/custom/_work.css
@@ -1,9 +1,14 @@
 .work-slide {
   transform: translate3d(0,0,0);
 }
+
 .work__wrapper {
   width: calc(90% + .5rem);
   @media (min-width: 44em) {
+    width: calc(90% + 1rem);
+  }
+  @media (min-width: 64em) {
+    max-width: 80rem;
     width: calc(90% + 2rem);
   }
 }
